@@ -1,5 +1,8 @@
 2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* rfc2047.el (rfc2047-decode-string): Don't use `m'.
+	Avoid mm-string-as-multibyte as well.
+
 	* nnweb.el (nnweb-insert-html):
 	Remove use of nnheader-string-as-multibyte.
 
